; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/mips/pci/extr_ops-au1000.c_mod_wired_entry.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/mips/pci/extr_ops-au1000.c_mod_wired_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mod_wired_entry(i32 %0, i64 %1, i64 %2, i64 %3, i64 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  store i32 %0, i32* %6, align 4
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store i64 %3, i64* %9, align 8
  store i64 %4, i64* %10, align 8
  %13 = call i32 (...) @read_c0_entryhi()
  %14 = and i32 %13, 255
  %15 = sext i32 %14 to i64
  store i64 %15, i64* %12, align 8
  %16 = call i64 (...) @read_c0_pagemask()
  store i64 %16, i64* %11, align 8
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @write_c0_index(i32 %17)
  %19 = load i64, i64* %10, align 8
  %20 = call i32 @write_c0_pagemask(i64 %19)
  %21 = load i64, i64* %9, align 8
  %22 = call i32 @write_c0_entryhi(i64 %21)
  %23 = load i64, i64* %7, align 8
  %24 = call i32 @write_c0_entrylo0(i64 %23)
  %25 = load i64, i64* %8, align 8
  %26 = call i32 @write_c0_entrylo1(i64 %25)
  %27 = call i32 (...) @tlb_write_indexed()
  %28 = load i64, i64* %12, align 8
  %29 = call i32 @write_c0_entryhi(i64 %28)
  %30 = load i64, i64* %11, align 8
  %31 = call i32 @write_c0_pagemask(i64 %30)
  ret void
}

declare dso_local i32 @read_c0_entryhi(...) #1

declare dso_local i64 @read_c0_pagemask(...) #1

declare dso_local i32 @write_c0_index(i32) #1

declare dso_local i32 @write_c0_pagemask(i64) #1

declare dso_local i32 @write_c0_entryhi(i64) #1

declare dso_local i32 @write_c0_entrylo0(i64) #1

declare dso_local i32 @write_c0_entrylo1(i64) #1

declare dso_local i32 @tlb_write_indexed(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
